# bbLean1.18.0

./: README.md
blackbox/: BB.h  BBApi.cpp  BBApi.h  BBApiPluginloader.h  BBRoot.cpp  BBVWM.cpp  BBVWM.h  BImage.cpp  BImage.h  Blackbox.cpp  CMakeLists.txt  ConfigMenu.cpp  DataTypes.h  Desk.cpp  Desk.h  DesktopMenu.cpp  DrawText.cpp  DrawText.h  MessageManager.cpp  MessageManager.h  Settings.cpp  Settings.h  StyleItem.h  Stylestruct.h  Toolbar.cpp  Tray.cpp  Tray.h  Utils.cpp  WindowQueryHelpers.cpp  WindowQueryHelpers.h  Workspaces.cpp  Workspaces.h  bbversion.h  blackbox.sln  blackbox.vcxproj  blackbox.vcxproj.filters  resource.rc  win0x500.h  worker.h
blackbox/Hooks/: CMakeLists.txt  deskhook.cpp
blackbox/Menu/: CommandItem.cpp  Contextmenu.cpp  Menu.cpp  Menu.h  MenuItem.cpp  MenuMaker.cpp  MenuMaker.h  RecentItem.cpp  ResultItemAction.h  SearchItem.cpp  SearchItem.h  SpecialFolder.cpp  TitleItem.cpp
blackbox/PluginManager/: PluginLoaderNative.cpp  PluginLoaderNative.h  PluginManager.cpp  Types.h
blackbox/Search/: SearchLocationInfo.h  complete.cpp  complete.h  config.h  history.cpp  history.h  index.cpp  index.h  jobmanager.h  lookup.cpp  lookup.h  rc.cpp  rc.h  regex.h  search.h  serialize.h  tmp.h  unicode.h
blackbox/x64/Debug/: BlackboxBar.rc  bbBlackboxBar.lib  bbPlugin.lib  blackbox.exe.recipe  blackbox.exp  blackbox.ilk  blackbox.lib  blackbox.rc  deskhook.lib  extensions.rc  lib.lib  plugins.rc
blackbox/x64/Debug/styles/: default.style  lean_blue  nightBlue.style
blackbox/x64/Debug/styles/Fluxbox/: Artwiz(FB).cfg  BlueFlux(FB).cfg  BlueNight(FB).cfg  Chris-BlackGreen(FB).cfg  Flux(FB).cfg  LemonSpace(FB).cfg  MerleyKay(FB).cfg  Meta(FB).cfg  Nyz(FB).cfg  Operation(FB).cfg  Outcomes(FB).cfg  Results(FB).cfg  Shade(FB).cfg  SpaceNight(FB).cfg  Twice(FB).cfg  Windowsbox(FB).cfg  bora_black(FB).cfg  bora_blue(FB).cfg  bora_green(FB).cfg  green_tea(FB).cfg  ostrich(FB).cfg  qnx-photon(FB).cfg  zimek_bisque(FB).cfg  zimek_darkblue(FB).cfg  zimek_green(FB).cfg
blackbox/x64/Debug/styles/Openbox/: Artwiz-boxed(OB).cfg  Bear2(OB).cfg  Branco(OB).cfg  Clearlooks(OB).cfg  Clearlooks-Olive(OB).cfg  HeavyMetal(OB).cfg  Mikachu(OB).cfg  Mire_v2_blue(OB).cfg  Mire_v2_green(OB).cfg  Mire_v2_orange(OB).cfg  Natura(OB).cfg
lib/: CMakeLists.txt  bblib.h  bbrc.c  bbrc.h  bbroot.c  bbshell.h  bools.c  colors.c  lib.sln  lib.vcxproj  lib.vcxproj.filters  moreutils.c  paths.c  pidl.c  strings.c  styleprops.c  styleprops.h  tinylist.c  tokenize.c  winutils.c
lib/Debug/lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lib.lastbuildstate
lib/x64/Debug/lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
pluginloaders/wow64adapter/: CMakeLists.txt  Debug.cpp  Debug.h  PluginIpcDiagram.bmml  WOW64Adapter.cpp  WOW64Adapter.h
pluginloaders/wow64adapter/PipeConnect/: Debug.cpp  Debug.h  Messages.hpp  PipeClient.cpp  PipeClient.hpp  PipeConnect.h  PipeServer.cpp  PipeServer.hpp  Serializer.hpp
plugins/BlackboxBar/: BlackboxBar.cpp  BlackboxBar.h  BlackboxBar.vcxproj  BlackboxBar.vcxproj.filters  BuffBmp.cpp  BuffBmp.h  CMakeLists.txt  TinyDropTarg.cpp  TinyDropTarg.h  bbLeanClasses.cpp  bbLeanClasses.h
plugins/bbAnalog/: CMakeLists.txt  bbAnalog.cpp  bbAnalog.sln  bbAnalog.vcxproj  bbAnalog.vcxproj.filters
plugins/bbAnalog/x64/Debug/: bbAnalog.dll.recipe
plugins/bbAnalog/x64/Debug/bbAnalog.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bbAnalog.lastbuildstate  bbAnalog.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
plugins/bbPlugin/: CMakeLists.txt  MessageBox.cpp  MessageBox.h  bbPlugin.cpp  bbPlugin.h  bbPlugin.sln  bbPlugin.vcxproj  bbPlugin.vcxproj.filters  sysmenu.cpp  tooltips.cpp  tooltips.h
plugins/bbPlugin/Debug/bbPlugin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
styles/Fluxbox/: Artwiz(FB).cfg  BlueFlux(FB).cfg  BlueNight(FB).cfg  Chris-BlackGreen(FB).cfg  Flux(FB).cfg  LemonSpace(FB).cfg  MerleyKay(FB).cfg  Meta(FB).cfg  Nyz(FB).cfg  Operation(FB).cfg  Outcomes(FB).cfg  Results(FB).cfg  Shade(FB).cfg  SpaceNight(FB).cfg  Twice(FB).cfg  Windowsbox(FB).cfg  bora_black(FB).cfg  bora_blue(FB).cfg  bora_green(FB).cfg  green_tea(FB).cfg  ostrich(FB).cfg  qnx-photon(FB).cfg  zimek_bisque(FB).cfg  zimek_darkblue(FB).cfg  zimek_green(FB).cfg
styles/Openbox/: Artwiz-boxed(OB).cfg  Bear2(OB).cfg  Branco(OB).cfg  Clearlooks(OB).cfg  Clearlooks-Olive(OB).cfg  HeavyMetal(OB).cfg  Mikachu(OB).cfg  Mire_v2_blue(OB).cfg  Mire_v2_green(OB).cfg  Mire_v2_orange(OB).cfg  Natura(OB).cfg  Onyx(OB).cfg  Onyx-Citrus(OB).cfg  Orang(OB).cfg  Powah(OB).cfg  Rinsei(OB).cfg  Syscrash(OB).cfg
tools/bbnote/: CMakeLists.txt  bbapi-small.cpp  bbnote-proxy.cpp  bbnote.cpp  edfiles.cpp  edfunc.cpp  edprint.cpp  readstyle.cpp
tools/bbstylemaker/: CMakeLists.txt  bbdialog.h  bbstylemaker.h  main.cpp  rcfile.cpp  readroot.cpp  snap.cpp  tokens.h  utils.cpp  writestyle.cpp
tools/bsetroot/: CMakeLists.txt  bsetroot.cpp
tools/bsetroot/CXIMAGE/: CMakeLists.txt
tools/bsetroot/CXIMAGE/CxImage/: CMakeLists.txt
tools/bsetroot/CXIMAGE/jpeg/: CMakeLists.txt
tools/bsetroot/CXIMAGE/png/: CMakeLists.txt
tools/bsetroot/CXIMAGE/zlib/: CMakeLists.txt  minigzip.c
tools/bsetshell/: CMakeLists.txt  bsetshell.cpp  resource.h  resource.rc
trayhook/: trayhook.cpp  trayhook.vcxproj  trayhook.vcxproj.filters
trayhook/x64/Debug/: trayhook.dll.recipe  vc142.idb
trayhook/x64/Debug/trayhook.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
